added token generator ,added function in login,added table in backend

--- a/ui/Login/login.html
+++ b/ui/Login/login.html
@@ -11,7 +11,7 @@
 
 <h2>Camaguru Login</h2>
 
-<form action="/action_page.php" method="post">
+<form  >
   <div class="imgcontainer">
     <img src="camaguru.png" alt="Avatar" class="avatar">
   </div>
@@ -23,14 +23,14 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="password" id="password" required>
 
-    <button onclick="getUserCrendintal">Login</button>
+    <button onclick="getUserCredentials()">Login</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <button onclick="getUserCrendintal()" type="button" class="cancelbtn">Cancel</button>
+    <button  type="button" class="cancelbtn">Cancel</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
